# codon_freq_table_aug_17

./: LICENSE
codon_freq_table_aug_17/: README.md  pyproject.toml
codon_freq_table_aug_17/src/codon_freq_table_aug_17_seanhatwork/: U00096.3_gene_sequences.fasta
src/codon_freq_table_aug_17_seanhatwork/: codon_freq_aug_10.py
tests/: codon_freq_aug_10_tests.py  test_sequences.fasta
