[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codon_freq_table_aug_17"
version = "0.0.1"
authors = [
  { name="Satoshi Sean Hasegawa", email="t21573sh@sfc.keio.ac.jp" },
]
description = "A python package calculating codon frequencies of given sequences and generating a table as an output."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/seanhatwork/codon_freq_table.git"
